<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/materialToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:title="@string/profile" />

    <ImageView
        android:id="@+id/person_avatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toEndOf="@+id/person_avatar"
        app:layout_constraintTop_toBottomOf="@+id/person_status">
    </TextView>

    <TextView
        android:id="@+id/person_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        app:layout_constraintStart_toEndOf="@+id/person_avatar"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/person_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="false"
        android:hint="@string/city"
        android:padding="17dp"

        app:layout_constraintTop_toBottomOf="@+id/person_avatar" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/person_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="false"
        android:hint="@string/phone"
        android:padding="17dp"

        app:layout_constraintTop_toBottomOf="@+id/person_city" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/person_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:focusable="false"
        android:hint="@string/mail"
        android:padding="17dp"

        app:layout_constraintTop_toBottomOf="@+id/person_phone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/enter_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/toExit"
        app:layout_constraintBottom_toBottomOf="parent">

    </com.google.android.material.button.MaterialButton>



</androidx.constraintlayout.widget.ConstraintLayout>